tests/typechecking/invalid/param_types_inference.ml
(* Inférence des types des paramètres *)
let rec f x y z = x +. y -. z in
print_int (f 1 2 3)
